--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: url("/src/assets/bg.jpg");
+  background-image: url("/public/bg.jpg");
   background-size: cover;
   background-position: center;
 }
